[package]
edition = "2018"
name = "poke-base-stats"
version = "0.1.0"

[dependencies]

# Poke
poke = {path = "../poke"}

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Error handling
anyhow = "1.0.43"

# Cmd
clap = "2.33.3"

# Serde
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"

# Util
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}
