[package]
edition = "2018"
name = "poke"
version = "0.1.0"

[dependencies]

# Logging
log = "0.4.14"

# Error handling

# Serde
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"

# Util
zutil = {git = "https://github.com/Zenithsiz/zutil", rev = "2a029369ac5aa4e7dbd6f6afb78ae419ee18666f"}
